<resources>
    <string name="app_name">CitizenRegistrationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_str">Create Account</string>
    <string name="login_str">Log in</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="first_name">First Name</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="email_address">Email Address</string>
    <string name="hospital_id">Hospital ID</string>
    <string name="enter_organisation_id">Enter organisation id</string>
    <string name="continue_form">Continue</string>
    <string name="log_in">Already have an account? Log in</string>
    <string name="no_account_register">No account yet? Register</string>
    <string name="hospital_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="authentication_success">Authentication Success.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="progress_bar_str">Requesting</string>
    <string name="welcome_str">Welcome</string>
    <string name="greeting_str">Hello, %s</string>
    <string name="citizen_name">Ola Machiavelli</string>
    <string name="name_title">Name</string>
    <string name="registration_no_title">Registration No:</string>
    <string name="gender_title">Gender</string>
    <string name="status_title">Status</string>
    <string name="citizen_registration_history_str">Citizen Registration History</string>
    <string name="first_name_str">First name</string>
    <string name="last_name_str">Last name</string>
    <string name="place_of_residence_str">Place of Occurrence</string>
    <string name="town_str">Town</string>
    <string name="birth_order_str">Birth Order</string>
    <string name="type_of_birth">Type of Birth</string>
    <string name="date_str">Date</string>
    <string name="particulars_of_child_str">Particulars of Child</string>
    <string name="continue_str">Continue</string>
    <string name="select_a_date">Select a Date</string>
    <string name="step_1">Step 1</string>
    <string name="martial_status">Martial Status</string>
    <string name="nationality">Nationality</string>
    <string name="state_of_origin">State of Origin</string>
    <string name="ethnic_origin">Ethnic Origin</string>
    <string name="education_level">Education Level</string>
    <string name="occupation">Occupation</string>
    <string name="step_two">Step 2</string>
    <string name="particulars_of_mother">Particulars of Mother</string>
    <string name="step_three">Step 3</string>
    <string name="particulars_of_father">Particulars of Father</string>
    <string name="specify_str">Specify</string>
    <string name="phone_number">Phone Number</string>
    <string name="national_id_no_str">National ID. No:</string>
    <string name="relationship_str">Relationship</string>
    <string name="residential_address">Residential Address</string>
    <string name="step_four">Step 4</string>
    <string name="particulars_of_informant">Particulars of Informant</string>
    <string name="submitted_str">Submitted!</string>
    <string name="success_submission_str">Great! You have successfully submitted.</string>
    <string name="close_str">Close</string>
    <string name="submit_question">Are you sure you want to submit?</string>
    <string name="submit_str">Submit</string>
    <string name="error_submitting">Error submitting data.</string>
    <string name="citizen_data_failure">Error: citizens data load failed.</string>
</resources>